language and form changes

--- a/www/translation/en.json
+++ b/www/translation/en.json
@@ -5,6 +5,7 @@
     "ABOUT_TITLE": "About the App",
     "AGREE": "Agree and Continue",
     "ALREADY_DOWNLOADED":"Already downloaded",
+    "APP_NAME": "Fountain of Life",
     "AUTHOR": "Author",
     "BACK": "Back",
     "BIBLE_BOOKS": "Books of the Bible",
@@ -68,7 +69,7 @@
     "OPEN": "Open",
     "ORGANIZATION": "Organization",
     "ORGANIZATION_DETAILS": "Please tell us more about your organization",
-    "PARTNERSHIP": "Partnership",
+    "PARTNERSHIP": "Become a Partner",
     "PARTNERSHIP_INFORMATION": "Partnership Information and Form",
     "PHONE": "Telephone number",
     "PLAY": "Play",
@@ -138,5 +139,29 @@
     "TRY_AGAIN": "Please select another language or the sermons tag and try again",
     "CLICK_HERE": "Let us know!",
     "ERROR_FOLDER": "Disk write error. Make sure your device has enough free space and try again",
-    "CHURCH_RESOURCES": "Does your church have resources in this language?"
+    "CHURCH_RESOURCES": "Does your church have resources in this language?",
+    "PARTNERSHIP_MAIN_CONDITION" : "To become a partner of Fountain of Life, you will need to be willing and able to upload digital resources that you or your organization has the copyright to, or that has no copyright associated.",
+    "SERMON" : "Teachings",
+    "BOOKS_PDF" : "Books (PDF)",
+    "AUDIO_BIBLE" : "Audio Bibles",
+    "IDIOM" : "Language of your Resources",
+    "YOUR_NAME" : "Your Name",
+    "YOUR_EMAIL" : "Your E-mail",
+    "YOUR_ORGANIZATION" : "Your Organization",
+    "YOUR_COUNTRY" : "Your Country",
+    "YOUR_PHONE" : "Telefone Number",
+    "IF_IS_LEADER" : "Are you a part of the organization or church leadership and do you have the ability to make your resources available?",
+    "LEADER_OPTIONS" : "Choose an Option",
+    "LEADER_OPTIONS_CHOOSE" : "Coose an Option",
+    "TERMS_CONDITIONS" : "See our Terms and Conditions",
+    "TERMS_CONDITIONS_AGREE" : "I have read and agree to the Terms and Conditions.",
+    "TERMS_CONDITIONS_ERROR" : "You must agree to the Terms and Conditions to continue",
+    "INPUT_EMPTY" : "Fill out this field",
+    "KIND_RESOURCES" : "What language(s) do you have resources in?",
+    "LANGUAGE_RESOURCES" : "Select the resources you can supply",
+    "TERMS_LINK" : "Click Here",
+    "SUBMIT_FORM" : "Submit form",
+    "LEADER_OPTIONS_Y" : "Yes",
+    "LEADER_OPTIONS_N" : "No",
+    "IMPORTANT": "IMPORTANT"
   }
