partnership form updates

--- a/www/translation/en.json
+++ b/www/translation/en.json
@@ -157,8 +157,8 @@
     "TERMS_CONDITIONS_AGREE" : "I have read and agree to the Terms and Conditions.",
     "TERMS_CONDITIONS_ERROR" : "You must agree to the Terms and Conditions to continue",
     "INPUT_EMPTY" : "Fill out this field",
-    "KIND_RESOURCES" : "What language(s) do you have resources in?",
-    "LANGUAGE_RESOURCES" : "Select the resources you can supply",
+    "KIND_RESOURCES" : "Select the resources you can supply",
+    "LANGUAGE_RESOURCES" : "What language(s) do you have resources in?",
     "TERMS_LINK" : "Click Here",
     "SUBMIT_FORM" : "Submit form",
     "LEADER_OPTIONS_Y" : "Yes",
