--- a/www/translation/pt.json
+++ b/www/translation/pt.json
@@ -158,8 +158,8 @@
     "TERMS_CONDITIONS_AGREE" : "Li e Concordo com os termos acima.",
     "TERMS_CONDITIONS_ERROR" : "Concorde com os termos marcando esta caixa",
     "INPUT_EMPTY" : "PREENCHA ESTE CAMPO",
-    "KIND_RESOURCES" : "Qual o idioma do material que deseja fornecer-nos?",
-    "LANGUAGE_RESOURCES" : "Marque os recursos que deseja fornecer-nos",
+    "KIND_RESOURCES" : "Marque os recursos que deseja fornecer-nos",
+    "LANGUAGE_RESOURCES" : "Qual o idioma do material que deseja fornecer-nos?",
     "TERMS_LINK" : "CLICANDO AQUI",
     "SUBMIT_FORM" : "SUBMETER REQUISIÇÃO",
     "LEADER_OPTIONS_Y" : "SIM",
